# ssc

./: .gitignore  .gitmodules  meson.build  meson_options.txt  readme.md
dependencies/: README.txt  prepare_dependencies.sh  recompile_base_library.sh
example/src/ssc/: ssc_example.c  ssc_example_simulation.c
include/ssc/: types.h
include/ssc/simulation/: libexport.h  simulation.h  simulation_api_impl.h  simulation_src.h  simulator_func_table.h
include/ssc/simulator/: libexport.h  simulator.h
src/ssc/: log.h
src/ssc/simulator/: cfg.c  cfg.h  global.h  group_scheduler.c  group_scheduler.h  in_bstream.h  in_queue.c  in_queue.h  out_data_memory.c  out_data_memory.h  out_queue.c  out_queue.h  simulation.c  simulation.h  simulator.c
test/src/ssc/: ahead_of_time_test.c  ahead_of_time_test.h  basic_test.c  basic_test.h  simulation_environment.c  simulation_environment.h  tests_main.c  two_fiber_test.c  two_fiber_test.h
